--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,11 +3,11 @@ server.port=8080
 # ?????
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 # ???url
-spring.datasource.url=jdbc:mysql://175.178.111.20:3306/test?serverTimezone=UTC&characterEncodeing=utf8&useUnicode=true&useSSL=false&allowPublicKeyRetrieval=true
+spring.datasource.url=jdbc:mysql://127.0.0.1:3306/water_system?serverTimezone=UTC&characterEncodeing=utf8&useUnicode=true&useSSL=false&allowPublicKeyRetrieval=true
 # ??????
 spring.datasource.username=root
 # ?????
-spring.datasource.password=123456
+spring.datasource.password=20000130wmxkb
 # ?????
 spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
 # ???????????
