--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,9 +5,9 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 # ???url
 spring.datasource.url=jdbc:mysql://127.0.0.1:3306/water_system?serverTimezone=UTC&characterEncodeing=utf8&useUnicode=true&useSSL=false&allowPublicKeyRetrieval=true
 # ??????
-spring.datasource.username=root
+spring.datasource.username=wmxkb
 # ?????
-spring.datasource.password=20000130wmxkb
+spring.datasource.password=123456
 # ?????
 spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
 # ???????????
